--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,25 @@
-.App {
-  text-align: center;
+#root {
+  /* text-align: center; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-.App-header,.App-main,.App-footer {
+.App-main {
   background-color: #282c34;
   width: 100vw;
-  max-width: 1024px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  display: flex;
+  flex: 1;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow: scroll;
 }
 
-.App-header{
-  min-height: 10vh;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.App-main{
-  min-height: 80vh;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.App-footer{
-  height: 10vh;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
 
 /* .App-link {
   color: #61dafb;
